--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Habito 3<br>Primero lo primero</h1>
     <p>Prioriza para alcanzar el exito en tu vida personal y profesional</p>
     <div>
-        <button type="button"><span></span>!Infórmate!</button>
+        <button type="button"><span></span><a href="https://www.conresiliencia.com/resumen-libro-los-7-habitos/">!Infórmate!</a></button>
         <button type="button"><span></span><a href="Contenido/prueeeeba.html">Ingresa Aquí</a></button>
     </div>
     </div>
