--- a/Contenido/prueeeeba.html
+++ b/Contenido/prueeeeba.html
@@ -122,21 +122,21 @@
       <div class="blogs-container-modern">
         <h2>Explora Nuestros Blogs</h2>
         <div class="blogs-list">
-          <div class="blog-item" onclick="location.href='blog1.html'">
+          <div class="blog-item" onclick="location.href='https://abantian.es/blog/habito-3-primero-lo-primero-stephen-covey-los-7-habitos-la-gente-altamente-efectiva/'">
             <div class="blog-icon">📝</div>
             <div class="blog-content">
               <h3>La importancia de priorizar</h3>
               <p>Descubre cómo el Hábito 3 puede transformar tu productividad.</p>
             </div>
           </div>
-          <div class="blog-item" onclick="location.href='blog2.html'">
+          <div class="blog-item" onclick="location.href='https://cursoadoslecentes-mergonzalez21.blogspot.com/2011/03/habito-3-poner-primero-lo-primero.html'">
             <div class="blog-icon">🔑</div>
             <div class="blog-content">
               <h3>Urgente vs. Importante</h3>
               <p>Aprende a distinguir las actividades esenciales de las distracciones.</p>
             </div>
           </div>
-          <div class="blog-item" onclick="location.href='blog3.html'">
+          <div class="blog-item" onclick="location.href='https://ignacioolmedo.blogspot.com/'">
             <div class="blog-icon">⚙️</div>
             <div class="blog-content">
               <h3>Autodisciplina en acción</h3>
