--- a/Contenido/Tareas.html
+++ b/Contenido/Tareas.html
@@ -81,7 +81,7 @@
             <section class="download-section">
                 <h2>Descarga tu hoja de trabajo</h2>
                 <p>Completa esta guía con nuestra hoja de trabajo diseñada para ayudarte a implementar el Hábito 3.</p>
-                <a href="#" class="download-btn">Descargar Hoja de Trabajo</a>
+                <a href="Time Management Worksheets - Spanish.pdf" class="download-btn">Descargar Hoja de Trabajo</a>
             </section>
         </div>
     </main>
