--- a/Contenido/prueeeeba.html
+++ b/Contenido/prueeeeba.html
@@ -31,10 +31,16 @@
       </div>
     </section>
 
+    <!--Seccion del anuncio-->
+    <div class="announcement-bar">
+      <p>🌟 ¡Descubre las herramientas para implementar el Hábito 3! <a href="#herramientas">Haz clic aquí</a> 🌟</p>
+      <button class="close-btn">✖</button>
+  </div>
+
     <!-- ¿Qué es el Hábito 3? -->
     <section id="habito3" class="section content-section">
-      <h2>Hábito 3: <br> Poner Primero lo Primero</h2>
       <div class="habito3-container">
+        <h2>Hábito 3: <br> Poner Primero lo Primero</h2>
         <!-- Información del Hábito -->
         <div class="habito3-info">
           <p>
@@ -49,6 +55,17 @@
           <div class="phrase-card">"Gestiona tu tiempo, no dejes que te controle."</div>
           <div class="phrase-card">"Lo importante nunca debe ser desplazado por lo urgente."</div>
           <div class="phrase-card">"Disciplina es hacer lo que importa, incluso cuando no es fácil."</div>
+        </div>
+        <br>
+        <div class="image-slider">
+          <div class="slider-track">
+            <img src="habito1.webp" alt="Imagen 1">
+            <img src="habito2.jpg" alt="Imagen 2">
+            <img src="habito3.jpg" alt="Imagen 3">
+            <img src="habito4.jpg" alt="Imagen 4">
+            <img src="habito5.jpg" alt="Imagen 5">
+            <img src="habito6.jpg" alt="Imagen 6">
+          </div>
         </div>
       </div>
     </section>
@@ -159,7 +176,7 @@
             <p>Cómo identificar tus prioridades.</p>
           </div>
           <div class="video-item">
-            <video src="WhatsApp Video 2024-12-02 at 12.26.23 AM.mp4" controls></video>
+            <video src="WhatsApp Video 2024-12-02 at 12.26.23 AM.mp4" allowfullscreen controls></video>
             <p>Estrategias para evitar distracciones.</p>
           </div>
         </div>
